[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aa-si-ml"
version = "0.1.0"
description = "Machine learning tools for NOAA Fisheries Active Acoustics Strategic Initiative sonar data analysis."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "NOAA Fisheries AA-SI" },
]
maintainers = [
    { name = "NOAA Fisheries AA-SI" },
]
keywords = [
    "noaa",
    "fisheries",
    "acoustics",
    "machine-learning",
    "clustering",
    "sonar",
    "echopype",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.21.0",
    "xarray>=2022.3.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "hdbscan>=0.8.29",
    "umap-learn>=0.5.0",
    "matplotlib>=3.5.0",
    "echopype>=0.8.0",
    "aa-si-utils @ git+https://github.com/BLayman-NOAA/AA-SI_Utils.git",
    "aa-si-visualization @ git+https://github.com/BLayman-NOAA/AA-SI_Visualization.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "pylint>=3.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/nmfs-ost/AA-SI_ML"
Documentation = "https://nmfs-ost.github.io/AA-SI_ML/"
Repository = "https://github.com/nmfs-ost/AA-SI_ML.git"
Issues = "https://github.com/nmfs-ost/AA-SI_ML/issues"
Changelog = "https://github.com/nmfs-ost/AA-SI_ML/blob/main/CHANGELOG.md"

# =============================================================================
# Tool Configuration
# =============================================================================

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aa_si_ml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]

[tool.coverage.run]
source = ["src/aa_si_ml"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src", "tests"]

[tool.pylint.main]
py-version = "3.10"
source-roots = ["src"]

[tool.pylint.format]
max-line-length = 88

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",  # Often not needed for simple modules
]
